<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/toolbarStyle"
            app:title="@string/atmText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.melscience.presentation.main.ui.view.TwoTextView
            android:id="@+id/btnCurrency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:ttv_title="@string/selectCurrencyText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="parent" />

        <Spinner
            android:id="@+id/spinnerCurrencyType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCurrency"
            app:layout_constraintEnd_toEndOf="parent" />

        <Switch
            android:id="@+id/switchEndlessBanknotes"
            style="@style/currencyText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/endlessBanknotesText"
            android:padding="16dp"
            android:checked="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCurrencyType"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/enterAmountText"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="25sp"
            android:textColor="@android:color/black"
            android:inputType="number"
            android:maxLength="9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchEndlessBanknotes" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCalculate"
            style="@style/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calculateText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/banknotes_bottom_sheet" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>